DeploymentStaging/deployPackage/objects/Work_Order_Activity_Assignment_Rule__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Vendor__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Assigned To Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Auto Assignment Rules</relationshipLabel>
        <relationshipName>Work_Order_Activity_Assignment_Rules</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_people__c</fullName>
        <label>Assigned people</label>
        <summaryForeignKey>Work_Order_Activity_Assignment_Rule_Item__c.Rule__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MAT_Code__c</fullName>
        <inlineHelpText>This field accepts wildcard and/or multiple entries. 
Ex. To use any MAT Code starting with a C, enter C*. For multiple entries, separate with a comma like BRK, RWK, VFY</inlineHelpText>
        <label>MAT Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <inlineHelpText>This field accepts wildcard and/or multiple entries. 
Ex. To use any Order Type starting with M, enter M*. For multiple entries, separate with a comma like MRX1, MPX1</inlineHelpText>
        <label>Order Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planner_Group__c</fullName>
        <inlineHelpText>This field accepts wildcard and/or multiple entries. 
Ex. To use any Planner Group starting with a 1, enter 1*. For multiple entries, separate with a comma like 100, 200, 300</inlineHelpText>
        <label>Planner Group</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant_Section__c</fullName>
        <inlineHelpText>This field accepts wildcard and/or multiple entries. 
Ex. To use any Plant Section code starting with a 1, enter 1*. For multiple entries, separate with a comma like 101, 102, 103</inlineHelpText>
        <label>Plant Section</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <formula>1+
IF( ISBLANK( MAT_Code__c ), 1, 0) 
+ IF( ISBLANK(  Unloading_Point__c), 1, 0)
+ IF( ISBLANK(  Order_Type__c ), 1, 0)
+ IF( ISBLANK(  Planner_Group__c ), 1, 0)
+ IF( ISBLANK(  Plant_Section__c  ), 1, 0)
+ IF( ISBLANK(   Recipient__c  ), 1, 0)
+ IF( ISBLANK(   Work_Center__c   ), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recipient__c</fullName>
        <inlineHelpText>This field can only contain one entry and requires an exact match.</inlineHelpText>
        <label>Recipient</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Notify Vendor Supervisor when activity is assigned to this vendor</inlineHelpText>
        <label>Notify Vendor Supervisor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Assigned_To_Vendor__c</field>
                <operation>equals</operation>
                <valueField>Contact.AccountId</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Auto Assignment Rules</relationshipLabel>
        <relationshipName>Auto_Assignment_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unloading_Point__c</fullName>
        <inlineHelpText>This field can only contain one entry and requires an exact match.</inlineHelpText>
        <label>Unloading Point</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Center__c</fullName>
        <inlineHelpText>This field accepts wildcard and/or multiple entries. 
Ex. To use any Work Center starting with ELEC, enter ELEC*. For multiple entries, separate with a comma like ELEC100, ELEC200</inlineHelpText>
        <label>Work Center</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfxId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>sfxId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Auto Assignment Rule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>MAT_Code__c</columns>
        <columns>Order_Type__c</columns>
        <columns>Planner_Group__c</columns>
        <columns>Plant_Section__c</columns>
        <columns>Recipient__c</columns>
        <columns>Work_Center__c</columns>
        <columns>Unloading_Point__c</columns>
        <columns>Assigned_To_Vendor__c</columns>
        <columns>Supervisor__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Active__c</columns>
        <columns>Priority__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Auto Assignment Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>